[package]
name = "jetbra"
version = "0.1.4"
edition = "2021"
authors = ["Yanchen Chen <yanchen1610@gamil.com>"]
description = "A CLI tool to activate JetBrains products"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.0", features = ["derive"] }
dirs = "5.0.1"
eframe = "0.21.3"
flate2 = "1.0.26"
tar = "0.4.38"

# See Minimizing Rust Binary Size at https://github.com/johnthagen/min-sized-rust

[profile.release]
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.
