[package]
name = "jetbra"
version = "0.1.4"
edition = "2021"
authors = ["Yanchen Chen <yanchen1610@gamil.com>"]
description = "A CLI tool to activate JetBrains products"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.3", features = ["derive"] }
dirs = "5.0"
eframe = "0.22"
flate2 = "1.0"
reqwest = { version = "0.11", features = ["json", "gzip"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = "0.4"
tokio = { version = "1.29", features = ["full"] }

# See Minimizing Rust Binary Size at https://github.com/johnthagen/min-sized-rust

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.
